<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:gravity="top|center_horizontal"
    android:padding="15dp"
    android:orientation="vertical"
...

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/textColorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Welcome to EchoPlay"
        android:textStyle="italic"
        android:textSize="18sp"
...
        android:paddingVertical="10dp"
        android:layout_marginBottom="25dp"
        app:hintTextColor="@color/hintTextColor"
        android:background="@drawable/rounded_edittext">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:background="@android:color/transparent"
            android:hint="Email"
            android:textSize="18sp"
...
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginBottom="16dp"
        app:hintTextColor="@color/hintTextColor"
        android:background="@drawable/rounded_edittext">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="18sp"
            android:inputType="textPassword"
...
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/login_btn"
        android:text="Login"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
...
